# foundry-cip

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISION-LOG.md  GUARANTEES.md  HEALTH-STANDARD.md  LICENSE  NOTICE  OVERVIEW.md  PURPOSE.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  WDGLL.md  _manifest.yaml  alembic.ini  capabilities.yaml  features.yaml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  connector-proposal.md  feature.md
.github/workflows/: codeql.yml  components-check.yml  test.yml
.jos/: ABOUT-JOS.md  COMPONENTS-CHEATSHEET.md  README.md  back-refs.json  charter.yaml  glossary.yaml  knowledge-index.yaml  onboarding-report-2026-05-17.md  onboarding-status.yaml  ownership.yaml  registry.yaml
.jos/awareness/: _config.yaml  _schema.yaml  awareness-index.yaml  foundry-cip-awareness.md
.jos/components/: snapshot.yaml
.jos/concepts/: INDEX-DAT.md  INDEX-DOC.md  INDEX-ENG.md  INDEX-FIN.md  INDEX-META.md  INDEX-OPERATIONS.md  INDEX-STRATEGY.md  JOS-C01-fractal-self-similarity.md  JOS-C02-requisite-parsimony.md  JOS-C03-boundary-management.md  JOS-C04-configuration-density.md  JOS-C05-data-primacy.md  JOS-C06-documentation-discipline.md  JOS-C07-knowledge-decay.md  JOS-C08-compression-gradient.md  JOS-C09-cynefin-framework.md  JOS-C10-emergent-complexity.md  JOS-C11-evolutionary-optimization.md  JOS-C12-volume-economics.md  JOS-C13-graceful-degradation.md  JOS-C14-ambient-discoverability.md  JOS-C15-the-agent-line.md  JOS-C16-trust-spectrum.md  JOS-C17-graduated-automation.md  JOS-C18-hub-and-spoke-authority.md  JOS-C19-human-oversight-spectrum.md  JOS-C20-composable-architecture.md  JOS-C21-system-entropy.md  JOS-C22-feedback-loop-latency.md  JOS-C23-failure-inevitability.md  JOS-C24-cognitive-load-budgeting.md  JOS-C25-abstraction-leakage.md  JOS-C26-change-as-primary-risk.md  JOS-C27-interfaces-outlive-implementations.md  JOS-C28-autopoiesis.md  JOS-C29-designed-tension.md  JOS-C30-multi-perspective-validation.md  JOS-C31-tempo-hierarchy.md  JOS-C32-indirect-coordination.md  JOS-C33-visibility-before-compression.md  (+22 more)
.jos/directories/: checkers.md  concepts.md  decisions-all.md  features.md  fleet-features.md  methods.md  rules-all.md  rules-eng.md  rules-meta.md  standards.md
.jos/glossary/: _config.yaml  _index.yaml  _polysemy-ban-list.yaml  _schema.yaml  core.yaml
.jos/guidance/: _config.yaml  _schema.yaml  _tag-vocabulary.yaml  core.yaml
.jos/principles/: INDEX-DAT.md  INDEX-ENG.md  INDEX-META.md  JOS-P01-trust-and-graduated-autonomy.md  JOS-P02-data-boundary-integrity.md  JOS-P03-traceability-and-accountability.md  JOS-P04-mandatory-escalation.md  JOS-P05-source-of-truth.md  JOS-P06-intelligence-preservation.md  JOS-P07-ambient-discoverability.md  JOS-P08-audit-and-learn.md  JOS-P09-start-somewhere-iterate.md  JOS-P10-deliberate-creation.md  JOS-P11-everything-that-matters.md  JOS-P12-design-once-compose-many.md  JOS-P13-prefer-small-reversible-changes.md  JOS-P14-prefer-explicit-boundaries.md  JOS-P15-prefer-observable-systems.md  JOS-P16-prefer-automated-verification.md  JOS-P17-prefer-clear-ownership.md  JOS-P18-verification-proportional-to-risk.md  JOS-P19-decision-records-over-institutional-memory.md  JOS-P20-acyclic-dependencies.md  JOS-P21-defined-degradation-modes.md  JOS-P22-ubiquitous-language.md  JOS-P23-evidence-based-evolution.md  JOS-P24-declared-exemplified-guided-governed.md  JOS-P25-design-roles-by-the-best-human-question.md  JOS-P26-every-role-births-with-a-complete-work-packet.md  JOS-P27-agents-and-humans-are-the-same-kind-of-role.md  JOS-P28-research-a-role-against-the-world-standard-before-it-runs.md  JOS-P29-roles-compose-from-archetypes-and-ship-an-onboarding-roadmap.md  _manifest.yaml  (+1 more)
cip/: db.py
context-bundle/: manifest.yaml  risk-appetite.md  stakeholders.md  strategy.md  vision.md  wdgll.md
docs/: ARCHITECTURE-SPLIT.md  CIP-CHEATSHEET.md  CONNECTOR-AUTHORING-GUIDE.md  CRM-COMPANION-SYNC.md  CROSS-TENANT-ACCESS-PATTERNS.md  CSS-CLASSIFICATION-CONTRACT.md  DEPLOYING-FOUNDRY-CIP-FOR-A-NEW-VENTURE.md  EXPORTING-VENTURE-CONNECTORS.md  EXTRACTION-HISTORY.md  FIXTURE-TENANT-HANDBOOK.md  FOUR-ACCESS-PATHS.md  HUBSPOT-CONNECTOR-GUIDE.md  IDENTITY-LINKS.md  JUNIOR-DEV-ONBOARDING.md  LENS-AUTHORING-GUIDE.md  LENS-INVENTORY.md  METABASE-OPERATOR-GUIDE.md  MIGRATION-RUNBOOK.md  ONBOARDING-A-NEW-TENANT.md  PHASE-1-TO-PHASE-2-HANDOFF.md  PROPERTY-GLOSSARY-PATTERN.md  PS-COMPANION-DATA-CONTRACT.md  README.md  RLS-SET-LOCAL-OPERATOR-GUIDE.md  SOURCE-MAP.md  STANDALONE-INTEGRATION-GUIDE.md  SYNC-ORCHESTRATOR-GUIDE.md  TENANT-ONBOARDING-CHECKLIST.md  TROUBLESHOOTING-AND-INCIDENT-RESPONSE.md  ZENDESK-CONNECTOR-GUIDE.md  _TEMPLATE.md  _registry.yaml  legacy-CLAUDE.md
scripts/: _apply_atlas_decisions_to_pm_2026_05_22.py  _file_assoc_contract_pm_2026_05_22.py  _file_pm_scopes_2026_05_22.py  _guard.py  _smoke_baseline.json  _smoke_test_embedding_swap.py  backfill_absolutes.py  backfill_ps_china_attribution.py  backfill_ps_china_book.py  backfill_ps_deal_history.py  check_invariants.py  check_snapshot_freshness.py  components_snapshot.py  compute_claimability.py  compute_monthly_earnings.py  decide_nationality.py  decide_partner_attribution.py  demo_wayward_semantic_search.py  detect_information_gaps.py  detect_property_drift.py  fix_engagement_companies_associations.py  generate_cip_cheatsheet.py  generate_lens_inventory.py  generate_tenant_manifest.py  harvest_nationality_signals.py  ingest_amazon_sellers.py  ingest_partner_tracking.py  ingest_payment_reports.py  ingest_research_findings.py  ingest_slack_brand_connections.py  ingest_stripe_customers.py  ingest_stripe_invoices.py  ingest_usa_research.py  install_components_hook.sh  jos  load_added_facts.py  manual_china_review_2026_07_13.py  manual_china_review_2026_07_16.py  migrate_b0_to_ecomlever.py  migrate_chunks_postgres_to_pinecone.py  (+33 more)
tests/: conftest.py
(+494 files in other folders)
